results/c0be342909b1cc13622fbf9b1c7d526c/err_code.txt
Traceback (most recent call last):
  File "./pyfile.py", line 15, in <module>
    from theonlinemcmc import MCMCWrapper
  File "/usr/local/lib/python2.7/dist-packages/theonlinemcmc/MCMCWrapper.py", line 19
    self.sampler = sampler
       ^
IndentationError: expected an indented block
